--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -100,8 +100,10 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <failOnError>true</failOnError>
                             <enableLazyInitialization>true</enableLazyInitialization>
+                            <enableDirtyTracking>true</enableDirtyTracking>
+                            <enableAssociationManagement>true</enableAssociationManagement>
+                            <enableExtendedEnhancement>false</enableExtendedEnhancement>
                         </configuration>
                         <goals>
                             <goal>enhance</goal>
