--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -100,6 +100,7 @@
                 <executions>
                     <execution>
                         <configuration>
+                            <failOnError>true</failOnError>
                             <enableLazyInitialization>true</enableLazyInitialization>
                             <enableDirtyTracking>true</enableDirtyTracking>
                             <enableAssociationManagement>true</enableAssociationManagement>
