update config and index names

--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -40,4 +40,4 @@ z.chess.provider.io.consumer.trust_key_store_path=
 postgresql.host=db-pg.isahl.com
 postgresql.port=5432
 postgresql.username=chess
-postgresql.database=isahl
+postgresql.database=isahl_8.x
