--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -65,6 +65,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>${postgresql.jdbc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
