--- a/Z-Rook/src/main/resources/db.properties
+++ b/Z-Rook/src/main/resources/db.properties
@@ -50,6 +50,9 @@ z.rook.dss[0].jpa.properties.hibernate.hbm2ddl.auto=update
 z.rook.dss[0].jpa.properties.hibernate.enable_lazy_load_no_trans=true
 z.rook.dss[0].jpa.properties.hibernate.format_sql=true
 z.rook.dss[0].jpa.properties.hibernate.default_schema="isahl"
+z.rook.dss[0].jpa.properties.hibernate.auto_quote_keyword=true
+z.rook.dss[0].jpa.properties.hibernate.identifier_quote_style=QUOTE
+z.rook.dss[0].jpa.properties.hibernate.globally_quoted_identifiers=true
 z.rook.dss[0].datasource.name=0
 z.rook.dss[0].datasource.driver-class-name=org.postgresql.Driver
 z.rook.dss[0].datasource.url=jdbc:postgresql://${postgresql.host}:${postgresql.port}/${postgresql.database}
