添加 IStateService 的filter(String filter)接口，用于过滤已订阅的Topic

--- a/Z-Arena/src/main/resources/application.properties
+++ b/Z-Arena/src/main/resources/application.properties
@@ -31,6 +31,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.aop.proxy-target-class=false
 spring.output.ansi.enabled=ALWAYS
 spring.jpa.show-sql=false
+spring.cache.type=jcache
+spring.cache.jcache.provider=org.ehcache.jsr107.EhcacheCachingProvider
+spring.cache.jcache.config=ehcache.xml
 #spring.main.allow-circular-references = true
 #z.chess.provider.io.consumer.key_store_path=cert/server.jks
 z.chess.provider.io.consumer.trust_key_store_path=
