--- a/Z-Rook/src/main/resources/cache.properties
+++ b/Z-Rook/src/main/resources/cache.properties
@@ -20,4 +20,6 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
+spring.cache.type=jcache
+spring.cache.jcache.provider=org.ehcache.jsr107.EhcacheCachingProvider
 spring.cache.jcache.config=classpath:ehcache.xml
